--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    src: url(../fonts/propaganda.ttf);
+    font-family: "Propaganda";
+}
+
 body {
     margin: 0;
     background: #1c1c1c;
